# tca9534-driver-rs

./: C_FFI_README.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  c_ffi规划草稿.md
examples/basic_usage/: Cargo.toml
examples/basic_usage/src/: main.rs
examples/c_desktop_mock/: Makefile  README.md  c_example.c
examples/stm32g4_c_ffi_demo/: README.md
include/: tca9534.h
src/: error.rs  errors.rs  ffi.rs  lib.rs  registers.rs  transport.rs
src/tca9534/: mod.rs  tca9534_async.rs  tca9534_sync.rs
