[package]
edition = "2021"
name = "basic_usage"
version = "0.1.0"
authors = ["adancurusul <1016867898@qq.com>"]
resolver = "2"

[[bin]]
name = "basic_usage"
test = false
bench = false

[dependencies]
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }

panic-probe = { version = "1.0.0", features = ["print-defmt"] }

embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
embedded-storage = "0.3.1"

cortex-m-rt = "0.7.3"

embassy-executor = { version = "0.7", features = ["task-arena-size-1024", "arch-cortex-m", "executor-thread", "defmt", "executor-interrupt"] }
embassy-sync = { version = "0.6" }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
embassy-stm32 = { version = "0.2", features = ["defmt", "stm32g431cb", "unstable-pac", "memory-x", "time-driver-any" ]  }

tca9534-driver-rs = { path = "../../", features = ["full-async", "defmt"] }

[features]
default = ["defmt", "defmt-rtt"]
defmt = ["dep:defmt"]
defmt-rtt = ["dep:defmt-rtt"]

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "z"
